--- a/четвёртая лаба.ipynb
+++ b/четвёртая лаба.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -10,58 +10,58 @@
      "output_type": "stream",
      "text": [
       "Введите L\n",
-      "800\n",
+      "640\n",
       "Введите N\n",
-      "2000\n",
+      "3200\n",
       "x =  0.0\n",
       "U_an =  118.224897583\n",
-      "U_cl =  118.224897603\n",
-      "d =  1.9990494593e-08\n",
+      "U_cl =  -4191543807.7\n",
+      "d =  4191543925.92\n",
       " \n",
       "x =  0.1\n",
       "U_an =  124.210033023\n",
-      "U_cl =  124.210033044\n",
-      "d =  2.12593675997e-08\n",
+      "U_cl =  -3299397.36297\n",
+      "d =  3299521.57301\n",
       " \n",
       "x =  0.2\n",
       "U_an =  130.342949585\n",
-      "U_cl =  130.342949608\n",
-      "d =  2.25703047363e-08\n",
+      "U_cl =  89.8322063278\n",
+      "d =  40.5107432573\n",
       " \n",
       "x =  0.3\n",
       "U_an =  136.623647269\n",
-      "U_cl =  136.623647293\n",
-      "d =  2.3924854986e-08\n",
+      "U_cl =  136.70064184\n",
+      "d =  0.0769945712183\n",
       " \n",
       "x =  0.4\n",
       "U_an =  143.052126075\n",
-      "U_cl =  143.052126101\n",
-      "d =  2.53249368143e-08\n",
+      "U_cl =  143.051318411\n",
+      "d =  0.000807664070862\n",
       " \n",
       "x =  0.5\n",
       "U_an =  149.628386003\n",
-      "U_cl =  149.62838603\n",
-      "d =  2.67699249434e-08\n",
+      "U_cl =  149.628386107\n",
+      "d =  1.03465197299e-07\n",
       " \n",
       "x =  0.6\n",
       "U_an =  156.352427053\n",
-      "U_cl =  156.352427082\n",
-      "d =  2.8257915119e-08\n",
+      "U_cl =  156.352427156\n",
+      "d =  1.02261594748e-07\n",
       " \n",
       "x =  0.7\n",
       "U_an =  163.224249225\n",
-      "U_cl =  163.224249255\n",
-      "d =  2.97950180084e-08\n",
+      "U_cl =  163.224249332\n",
+      "d =  1.06213178697e-07\n",
       " \n",
       "x =  0.8\n",
       "U_an =  170.243852519\n",
-      "U_cl =  170.243852551\n",
-      "d =  3.18434274504e-08\n",
+      "U_cl =  170.24385263\n",
+      "d =  1.10873060066e-07\n",
       " \n",
       "x =  0.9\n",
       "U_an =  177.411236935\n",
-      "U_cl =  177.41123698\n",
-      "d =  4.46360104434e-08\n",
+      "U_cl =  177.411237051\n",
+      "d =  1.15615080176e-07\n",
       " \n",
       "x =  1.0\n",
       "U_an =  184.726402473\n",
@@ -121,6 +121,15 @@
     "    print 'd = ', m.fabs(u_an(1, i/10.0) - U[N][i*L/10])\n",
     "    print ' '"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
